--- a/src/app/view/maismix/maismix.component.css
+++ b/src/app/view/maismix/maismix.component.css
@@ -33,7 +33,7 @@
 
 .slide {
   width: 25%;
-  position: relative;
+
 }
 
 .slide img {
@@ -89,10 +89,11 @@
   display: flex;
   justify-content:center;
   width: 100%;
-  font-size: 18px;
+  font-size: 19px;
   line-height: 120%;
 }
 
-.teste2{
+.text-about{
   width: 50%;
+  text-align: justify;
 }
